Completed a few test cases