@@ -53,23 +53,27 @@ public class Request extends Endpoint {
             endpoint = String.format(endpoint, uid, radius);
             System.out.println(endpoint);
 
-            URL url = new URL(endpoint);
-            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-            conn.setRequestMethod("GET");
-            conn.setConnectTimeout(5000);
-            conn.setReadTimeout(5000);
-            int status = conn.getResponseCode();
+            HttpClient client = HttpClient.newHttpClient();
+
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(endpoint))
+                    .header("Content-Type", "application/json")
+                    .GET()
+                    .build();
+
+            HttpResponse<String> response = null;
+            try {
+                response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+                this.sendStatus(r, 500);
+            }
+            int status = response.statusCode();
             if(status != 200){
                 this.sendStatus(r, status);
                 return;
             }
-            BufferedReader in = new BufferedReader(new InputStreamReader(conn.getInputStream()));
-            String inputLine;
-            StringBuilder response = new StringBuilder();
-            while ((inputLine = in.readLine()) != null) {
-                response.append(inputLine);
-            }
-            in.close();
+
             //Read JSON response and print
             JSONObject myResponse = new JSONObject(response.toString());
             JSONObject var = new JSONObject();
